correction contraste

--- a/style.css
+++ b/style.css
@@ -808,11 +808,11 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #f06e39;
 }
 
 .bgc-atomic-tangerine-2 {
-    background-color: #F3976C;
+    background-color: #f06e39;
     z-index: -2;
 }
 
